# hbrainfuck

./: .ghci  .gitignore  .stylish-haskell.yaml  README.md  example.bf  flake.nix  hbrainfuck.cabal  hls.json  stack.yaml
src/: Eval.hs  Main.hs  Parser.hs  Types.hs
test/: Spec.hs
