cabal-version: 2.2
name:          hbrainfuck
version:       0.1.0.0
author:        Léana 江
maintainer:    leana.jiang@icloud.com

common common
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-patterns -Wincomplete-uni-patterns
    -Wredundant-constraints -Werror=missing-fields

  build-depends:
    , array                 ^>=0.5.4.0
    , base                  >=4.7       && <5
    , megaparsec            ^>=9.3.1
    , mtl                   ^>=2.2.2
    , optparse-applicative  ^>=0.17.1.0
    , text                  ^>=2.0.2

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Eval
    Parser
    Types

executable hbrainfuck-bin
  import:         common
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  hbrainfuck
  other-modules:
    Eval
    Parser
    Types

test-suite simple-spec
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , hbrainfuck
    , hspec             ^>=2.10
    , hspec-megaparsec  ^>=2.2.0
    , QuickCheck        ^>=2.14
